--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/rizkilabs/data-produk-backend/issues"
   },
-  "homepage": "https://github.com/rizkilabs/data-produk-backend#readme"
+  "homepage": "https://github.com/rizkilabs/data-produk-backend#readme",
+  "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.17.1"
+  }
 }
